err/collective.wowcharacter.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/wowcharacter'...
Listing './lib/python3.5/site-packages/collective/wowcharacter/browser'...
Compiling './lib/python3.5/site-packages/collective/wowcharacter/browser/activity_api.py'...
***   File "./lib/python3.5/site-packages/collective/wowcharacter/browser/activity_api.py", line 36
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/collective/wowcharacter/browser/armory_api.py'...
***   File "./lib/python3.5/site-packages/collective/wowcharacter/browser/armory_api.py", line 30
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/wowcharacter/browser/images'...
Listing './lib/python3.5/site-packages/collective/wowcharacter/browser/stylesheets'...
Listing './lib/python3.5/site-packages/collective/wowcharacter/browser/templates'...
Compiling './lib/python3.5/site-packages/collective/wowcharacter/browser/wowcharacter.py'...
***   File "./lib/python3.5/site-packages/collective/wowcharacter/browser/wowcharacter.py", line 298
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/wowcharacter/content'...
Listing './lib/python3.5/site-packages/collective/wowcharacter/interfaces'...
Listing './lib/python3.5/site-packages/collective/wowcharacter/locales'...
Listing './lib/python3.5/site-packages/collective/wowcharacter/locales/de'...
Listing './lib/python3.5/site-packages/collective/wowcharacter/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/wowcharacter/portlets'...
Listing './lib/python3.5/site-packages/collective/wowcharacter/portlets/profiles'...
Listing './lib/python3.5/site-packages/collective/wowcharacter/portlets/profiles/default'...
Compiling './lib/python3.5/site-packages/collective/wowcharacter/portlets/realmstatus_api.py'...
***   File "./lib/python3.5/site-packages/collective/wowcharacter/portlets/realmstatus_api.py", line 28
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/wowcharacter/profiles'...
Listing './lib/python3.5/site-packages/collective/wowcharacter/profiles/default'...
Listing './lib/python3.5/site-packages/collective/wowcharacter/profiles/default/types'...
Listing './lib/python3.5/site-packages/collective/wowcharacter/tests'...
Listing './lib/python3.5/site-packages/collective.wowcharacter-0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
